# xmr-pay-hub-on-akash

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  AGENTS.md  AUTO_SWEEP_SUMMARY.md  CHAIN-DISPLAY-FIXES.md  Dockerfile  LICENSE  MORNING-STATUS.md  PAYMENT_LINKS_INVOICES_FIXES.md  POS-USDT-PARTIAL-PROGRESS.md  POS-USDT-PRICE-FIX.md  QUICK-TEST.md  README.md  SWEEP_BALANCE_CHECK.md  SWEEP_IMPLEMENTATION.md  SWEEP_UPDATES.md  TRX-DUAL-LINKS-STATUS.md  TRX-INTEGRATION-STATUS.md  TRX-USDT-COMPLETE.md  TRX-USDT-INTEGRATION.md  USDT-FIXES-PHASE2.md  USDT-TRC20-INTEGRATION.md  USDT-TRC20-STATUS.md  add_docs_link.py  add_overview_docs_link.py  add_pos_toggle.py  add_usdt_currency.py  build.sh  cleanup_wallet_names.py  consolidate_seeds.py  deploy.yaml  docker-compose.yml  dual_links_fix.py  fix-existing-merchant-tron.js  fix_all_copy_buttons.py  fix_api_copy.py  fix_chain_display.py  (+22 more)
app-ui/: index.html
memory/: 2026-04-17.md
src/: App.tsx  COPY_FIX_REQUIRED.ts  index.css
src/components/: AdvancedWalletSetup.tsx  ArchitectureDiagram.tsx  BrandLogo.tsx  BrowserWalletSetup.tsx  (+19 more)
xmrpay-flow-main/: .gitignore  AUDIT.md  DARKFI-INTEGRATION.md  PROGRESS.md  TAURI-PROGRESS.md  ecosystem.config.cjs  index.html  package-lock.json  package.json  serve.js  tailwind.config.ts  vite.config.ts.timestamp-1775815867733-72b117d1502ad.mjs
xmrpay-flow-main/src-tauri/: Cargo.toml  tauri.conf.json
xmrpay-flow-main/src-tauri/icons/: icon.icns
xmrpay-flow-main/src-tauri/src/: main.rs  node_manager.rs  plugin_manager.rs  zk_loader.rs  zk_provider.rs
(+88 files in other folders)
